third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_local_combo_invalid.exp

Diagnostics:
error: conflicting borrow operations
   ┌─ tests/reference-safety/v1-tests/borrow_local_combo_invalid.move:48:9
   │
46 │         if (cond) x = &mut s else x = other;
   │                       ------ other mutable local borrow
47 │         let y = &mut s;
   │                 ------ mutable local borrow attempted here
48 │         *y;
   │         ^^ reference used here

error: conflicting borrow operations
   ┌─ tests/reference-safety/v1-tests/borrow_local_combo_invalid.move:39:9
   │
37 │         if (cond) x = &mut s else x = other;
   │                       ------ other mutable local borrow
38 │         let y = &s;
   │                 -- local borrow attempted here
39 │         *y;
   │         ^^ reference used here

error: conflicting borrow operations
   ┌─ tests/reference-safety/v1-tests/borrow_local_combo_invalid.move:40:9
   │
37 │         if (cond) x = &mut s else x = other;
   │                       ------ mutable local borrow attempted here
38 │         let y = &s;
   │                 -- other local borrow
39 │         *y;
40 │         *x;
   │         ^^ reference used here

error: conflicting borrow operations
   ┌─ tests/reference-safety/v1-tests/borrow_local_combo_invalid.move:23:9
   │
20 │         if (cond) f = &mut s.f else f = &mut other.f;
   │                            - other mutable local borrow
21 │         let x = &mut s;
   │                 ------ mutable local borrow attempted here
22 │         *f;
23 │         *x;
   │         ^^ reference used here
